[package]
name = "biomine_native"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
biome_css_formatter = "=0.5.7"
biome_css_syntax = "=0.5.7"
biome_js_formatter = "=0.5.7"
biome_js_parser = "=0.5.7"
biome_js_syntax = "=0.5.7"
biome_diagnostics = "=0.5.7"
biome_rowan = "=0.5.7"
biome_parser = "=0.5.7"
biome_unicode_table = "=0.5.7"

rustler = "0.38.0"
